--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "id": "5f5ccfe2",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "id": "54f02a44",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "id": "d1e77fb0",
    "metadata": {
     "scrolled": false
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "id": "d0e76241",
    "metadata": {
     "scrolled": true
@@ -189,7 +189,7 @@
        "dict_keys(['data', 'target', 'frame', 'target_names', 'DESCR', 'feature_names', 'filename', 'data_module'])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "id": "ed492dd6",
    "metadata": {},
    "outputs": [
@@ -413,7 +413,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 6,
    "id": "e0495147",
    "metadata": {},
    "outputs": [
@@ -467,7 +467,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 7,
    "id": "e708d7ac",
    "metadata": {},
    "outputs": [
@@ -520,7 +520,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "id": "038e8039",
    "metadata": {},
    "outputs": [
@@ -542,7 +542,7 @@
        "0"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "id": "7f251b2e",
    "metadata": {},
    "outputs": [
@@ -1619,7 +1619,7 @@
        "[31 rows x 31 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1630,7 +1630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 10,
    "id": "6925116a",
    "metadata": {
     "scrolled": true
@@ -1645,7 +1645,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1656,7 +1656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 11,
    "id": "0008e0f2",
    "metadata": {},
    "outputs": [],
@@ -1666,7 +1666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 12,
    "id": "45af00c8",
    "metadata": {},
    "outputs": [
@@ -1676,7 +1676,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1698,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 13,
    "id": "091a6768",
    "metadata": {
     "scrolled": false
@@ -2275,7 +2275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 14,
    "id": "41549040",
    "metadata": {},
    "outputs": [],
@@ -2287,7 +2287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 15,
    "id": "9a3531c3",
    "metadata": {},
    "outputs": [],
@@ -2297,7 +2297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 16,
    "id": "043fbc82",
    "metadata": {},
    "outputs": [
@@ -2307,7 +2307,7 @@
        "((426, 30), (143, 30), (426,), (143,))"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2318,7 +2318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 17,
    "id": "bcecb785",
    "metadata": {},
    "outputs": [],
@@ -2332,7 +2332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 18,
    "id": "7738fea7",
    "metadata": {},
    "outputs": [
@@ -2354,7 +2354,7 @@
        "        -3.52490937e-03,  1.30103137e-02, -2.96216057e-04]])"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2368,7 +2368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 19,
    "id": "222faf21",
    "metadata": {},
    "outputs": [
@@ -2399,7 +2399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 20,
    "id": "1c5902b8",
    "metadata": {},
    "outputs": [
@@ -2414,7 +2414,7 @@
        "       0.99969702, 0.99992302, 0.99997118, 0.99999606, 1.        ])"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2425,7 +2425,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 21,
+   "id": "cebce9c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.rename(columns={\n",
+    "    'mean radius': 'mean_radius',\n",
+    "    'mean texture': 'mean_texture',\n",
+    "    'mean perimeter': 'mean_perimeter',\n",
+    "    'mean area': 'mean_area',\n",
+    "    'mean smoothness': 'mean_smoothness',\n",
+    "    'mean compactness': 'mean_compactness',\n",
+    "    'mean concavity': 'mean_concavity',\n",
+    "    'mean concave points': 'mean_concave_points',\n",
+    "    'mean symmetry': 'mean_symmetry',\n",
+    "    'mean fractal dimension': 'mean_fractal_dimension',\n",
+    "    'radius error': 'radius_error',\n",
+    "    'texture error': 'texture_error',\n",
+    "    'perimeter error': 'perimeter_error',\n",
+    "    'area error': 'area_error',\n",
+    "    'smoothness error': 'smoothness_error',\n",
+    "    'compactness error': 'compactness_error',\n",
+    "    'concavity error': 'concavity_error',\n",
+    "    'concave points error': 'concave_points_error',\n",
+    "    'symmetry error': 'symmetry_error',\n",
+    "    'fractal dimension error': 'fractal_dimension_error',\n",
+    "    'worst radius': 'worst_radius',\n",
+    "    'worst texture': 'worst_texture',\n",
+    "    'worst perimeter': 'worst_perimeter',\n",
+    "    'worst area': 'worst_area',\n",
+    "    'worst smoothness': 'worst_smoothness',\n",
+    "    'worst compactness': 'worst_compactness',\n",
+    "    'worst concavity': 'worst_concavity',\n",
+    "    'worst concave points': 'worst_concave_points',\n",
+    "    'worst symmetry': 'worst_symmetry',\n",
+    "    'worst fractal dimension': 'worst_fractal_dimension'\n",
+    "    })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "2122093b",
    "metadata": {},
    "outputs": [],
